[package]
name = "lite-lib"
version = "0.1.0"
authors = ["oScape <benoit.chassignol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.web-sys]
version = "0.3.24"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
