[package]
name = "lite-lib"
version = "0.1.0"
authors = ["oScape <benoit.chassignol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2.60"
js-sys = "0.3.37"
web-sys = { version = "0.3.24", features = ['Document','Element','HtmlElement','HtmlButtonElement','HtmlSelectElement','HtmlOptionElement','Node','Window','Event','EventTarget'] }