[package]
name = "lite-lib"
version = "0.1.0"
authors = ["oScape <benoit.chassignol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wasm-bindgen = "0.2.62"
wasm-bindgen-futures = "0.4.11"
js-sys = "0.3.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.55"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'console',
    'Document',
    'HtmlElement',
    'HtmlButtonElement',
    'HtmlDivElement',
    'Window'
]