[package]
name = "wasm-lib"
version = "0.1.0"
authors = ["oScape <benoit.chassignol@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
lite-lib = { path = "../lite-lib" }
wasm-bindgen = "0.2.60"
wasm-bindgen-futures = "0.4.11"
js-sys = "0.3.37"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Event',
    'HtmlSelectElement',
    'HtmlElement',
    'Window',
    'Event',
    'EventTarget',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
]

[profile.release]
opt-level = "s"
